[gd_scene format=3 uid="uid://ixxhsopjxo2g"]

[ext_resource type="Script" uid="uid://drlcp5cosbwjw" path="res://Scripts/BattleScene/battle_scene.gd" id="1_6mmpu"]
[ext_resource type="PackedScene" uid="uid://1ipkbhxl3ark" path="res://Nodes/BattleScene/battle_field.tscn" id="2_dsjwx"]
[ext_resource type="PackedScene" uid="uid://dubpebcoffte8" path="res://Nodes/BattleScene/play_area.tscn" id="3_kw3q3"]
[ext_resource type="Script" uid="uid://b3qr8uamsao8a" path="res://Scripts/UI/player_hand.gd" id="4_ip6xv"]
[ext_resource type="PackedScene" uid="uid://5jlea1prliur" path="res://Nodes/UI/battle_results_layer.tscn" id="10_lahee"]
[ext_resource type="FontFile" uid="uid://dv5gofkx77peh" path="res://Graphics/PlaceholderSource/Dungeon Mode Font/dungeon-mode.ttf" id="11_gthjr"]
[ext_resource type="PackedScene" uid="uid://tvgskh3hgret" path="res://Nodes/UI/energy_counter.tscn" id="12_qx0x0"]
[ext_resource type="PackedScene" uid="uid://dys3hydaairuy" path="res://Nodes/BattleScene/battle_entity_template.tscn" id="14_js8we"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_lahee"]
b = Vector2(3, 452)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_o1our"]
b = Vector2(-1151, -3)

[node name="BattleScreen" type="Node2D" unique_id=1502548985 node_paths=PackedStringArray("player_entity", "play_area", "battle_field", "energy_counter", "battle_results_display")]
script = ExtResource("1_6mmpu")
player_entity = NodePath("Player")
play_area = NodePath("CardLayer/PlayArea")
battle_field = NodePath("BattleField")
energy_counter = NodePath("UILayer/EnergyCounter")
battle_results_display = NodePath("BattleResultDisplay")

[node name="BattleField" parent="." unique_id=314861 node_paths=PackedStringArray("player_entity") instance=ExtResource("2_dsjwx")]
position = Vector2(553, 363)
player_entity = NodePath("../Player")
battle_object_offset = Vector2(0, -30)
opportunity_chance = 0.5

[node name="CardLayer" type="CanvasLayer" parent="." unique_id=514796496]

[node name="PlayArea" parent="CardLayer" unique_id=574541479 instance=ExtResource("3_kw3q3")]
position = Vector2(546, 263)

[node name="PlayerHand" type="Node2D" parent="CardLayer" unique_id=1303605846]
script = ExtResource("4_ip6xv")
y_position = 480.0

[node name="UILayer" type="CanvasLayer" parent="." unique_id=1354014698]

[node name="EndTurnButton" type="Button" parent="UILayer" unique_id=750618784]
offset_left = 820.0
offset_top = 399.0
offset_right = 942.0
offset_bottom = 422.0
theme_override_fonts/font = ExtResource("11_gthjr")
text = "End Turn"

[node name="EnergyCounter" parent="UILayer" unique_id=295327316 instance=ExtResource("12_qx0x0")]
offset_left = 232.0
offset_top = 381.0
offset_right = 272.0
offset_bottom = 421.0
energy_default = 6

[node name="TestPlayerDamage" type="Button" parent="UILayer" unique_id=1199656314]
texture_filter = 1
offset_left = 821.0
offset_top = 292.0
offset_right = 928.0
offset_bottom = 323.0
theme_override_fonts/font = ExtResource("11_gthjr")
theme_override_font_sizes/font_size = 8
text = "Damage Player"

[node name="TestEnemyDamage" type="Button" parent="UILayer" unique_id=734915317]
texture_filter = 1
offset_left = 822.0
offset_top = 326.0
offset_right = 929.0
offset_bottom = 357.0
theme_override_fonts/font = ExtResource("11_gthjr")
theme_override_font_sizes/font_size = 8
text = "Damage Enemy"

[node name="Add Card" type="Button" parent="UILayer" unique_id=2028608465]
texture_filter = 1
offset_left = 826.0
offset_top = 360.0
offset_right = 933.0
offset_bottom = 391.0
theme_override_fonts/font = ExtResource("11_gthjr")
theme_override_font_sizes/font_size = 8
text = "Add Card"

[node name="Player" parent="." unique_id=1657833200 instance=ExtResource("14_js8we")]
position = Vector2(550, 348)
skip_defeat_animation = true

[node name="Area2D" type="Area2D" parent="." unique_id=275372505]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=357016338]
shape = SubResource("SegmentShape2D_lahee")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D" unique_id=837989287]
position = Vector2(1152, 0)
shape = SubResource("SegmentShape2D_lahee")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D" unique_id=1955985953]
position = Vector2(1152, 0)
shape = SubResource("SegmentShape2D_o1our")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Area2D" unique_id=608294795]
position = Vector2(1152, 448)
shape = SubResource("SegmentShape2D_o1our")

[node name="BattleResultDisplay" parent="." unique_id=1254281250 instance=ExtResource("10_lahee")]

[connection signal="button_up" from="UILayer/EndTurnButton" to="." method="_on_end_turn_button_up"]
[connection signal="button_up" from="UILayer/EndTurnButton" to="." method="_on_end_turn_button_button_up"]
[connection signal="button_up" from="UILayer/TestPlayerDamage" to="." method="_on_button_button_up"]
[connection signal="button_up" from="UILayer/TestEnemyDamage" to="." method="_on_test_enemy_damage_button_up"]
[connection signal="button_up" from="UILayer/Add Card" to="." method="_on_add_card_button_up"]
